# eplc

./: .gdb_history  .gitignore  .gitmodules  .travis.yml  Gopkg.toml  HEADER  Makefile  README.md  SymbolTable.json  Wiki.md  aplc  aplc-0.1  eplc  eplc-0.1.2  future.md  gammar.md  go.mod  less  main.go  patches.md  test.epl  test.eplc  tst.air  tst.epl
Output/: Print.go
Profile/: all.cpup  dump.cpu  dump.mem
parser_tools/: README.md  first_and_follow.py  gam  gen_gram.py  gg.txt  grammer.txt
samples/: .air  SymbolTable.json  SyntaxTree.json  colton.air  colton.epl  for.epl  test.air  test.epl
samples/samples/: for.epl  if.epl
samples/samples/syntax_errors/: expressions_errors.epl  fnc_error.epl
samples/syntax_errors/: decl_errors.epl  if_error.epl  import_error.epl
src/: eplc.go
src/apllex/: TokenType.go  lex.go
src/apllex/Errors/: Errors.go
src/aplparse/: AST.go  parser.go
src/eplinter/: README.md  commandline.go  eval.go  repl  repl.go
src/eplinter/internal/: cmd.go  io.go
src/libapl/: aplc.go
src/libapl/Output/: Print.go
src/libapl/apllex/: Token.go  lex.go
src/libapl/aplparse/: Grammer.md  parser.go
src/libepl/: Information.go  PhaseIndicator.go  compiler.go
src/libeplc/: commandline.go  compiler.go
src/libio/: IntelligentPrint.go  Print.go
tests/: expr.go  lexer_test.go  parser_test.go
tools/BADT/: conf.json  conf.json.old
tools/Support/epldbg/: .CMakeLists.txt.un~  .luncher.cxx.un~  .luncher.hxx.un~  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  luncher.cpp  luncher.h
wiki/language/: Wiki.md  keywords.md
(+43 files in other folders)
